# vide

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile.am  README.md  configure.ac
include/: Makefile.am
include/vide/: Makefile.am  buffer.h  buildtool.h  editor.h  filetypemanager.h  interface.h  project.h  projectdefs.h  re.h  tokeniser.h  utils.h  vide.h
src/: Makefile  Makefile.am  buffer.cpp  buffer.h  cxxfiletypemanager.cpp  cxxfiletypemanager.h  editor.cpp  editor.h  editortipwindow.cpp  editortipwindow.h  filetypemanager.cpp  filetypemanager.h  format.cpp  format.h  interface.cpp  interface.h  main.cpp  project.cpp  project.h  projectview.cpp  projectview.h  structureview.cpp  structureview.h  tokeniser.cpp  tokeniser.h  utils.cpp  utils.h  vi.cpp  vide.cpp  vide.h  videwindow.cpp  videwindow.h
src/buildtools/: Makefile.am  buildtool.cpp  buildtool.h  gnu.cpp  gnu.h  makefile.cpp  makefile.h
src/cxx/: Makefile.am
src/editor/: Makefile.am  buffer.cpp  buffer.h  editor.cpp  editor.h
src/filetypes/: Makefile.am  filetypemanager.cpp  filetypemanager.h  tokeniser.cpp  tokeniser.h
src/filetypes/cxx/: Makefile.am  cxxfiletypemanager.cpp  cxxfiletypemanager.h  cxxtokeniser.cpp
src/interfaces/: Makefile.am  interface.cpp  interface.h
src/interfaces/vi/: Makefile.am  commands.cpp  excommands.cpp  search.cpp  vi.cpp  vi.h  vicommands.cpp  visual.cpp
src/libvide-core/: CMakeLists.txt  Makefile.am  interface.cpp  plugins.cpp  re.cpp  utils.cpp  vide.cpp
src/libvide-core/buildtools/: Makefile.am  buildtool.cpp  gnu.cpp  gnu.h  makefile.cpp  makefile.h
src/libvide-core/editor/: Makefile.am  buffer.cpp  editor.cpp
src/libvide-core/filetypes/: Makefile.am  filetypemanager.cpp  tokeniser.cpp
src/libvide-core/interfaces/: Makefile.am  interface.cpp
src/libvide-core/interfaces/vi/: Makefile.am  commands.cpp  excommands.cpp  vi.cpp  vi.h
src/libvide-core/project/: Makefile.am  entry.cpp  file.cpp  index.cpp  module.cpp  project.cpp
src/plugins/: CMakeLists.txt  Makefile.am  gitplugin.cpp  gitplugin.h  plugins.cpp  plugins.h  testplugin.cpp
src/plugins/filetypes/: Makefile.am
src/plugins/filetypes/cxx/: Makefile.am  cxxfiletypemanager.cpp  cxxfiletypemanager.h  cxxtokeniser.cpp
src/plugins/filetypes/java/: JavaLexer.cpp  JavaLexer.h  JavaParser.cpp  JavaParser.h  JavaParserBaseListener.cpp  JavaParserBaseListener.h  JavaParserListener.cpp  JavaParserListener.h  Makefile.am  javafiletypemanager.cpp  javafiletypemanager.h  javatokeniser.cpp
src/plugins/filetypes/java/grammar/: .gitignore  JavaLexer.g4  build.sh
src/plugins/git/: Makefile.am  gitplugin.cpp  gitplugin.h
src/project/: Makefile.am  entry.cpp  file.cpp  index.cpp  project.cpp  project.h
src/ui/: Makefile.am  editortipwindow.cpp  editortipwindow.h  projectwindow.cpp  projectwindow.h  settingswindow.cpp  settingswindow.h  videwindow.cpp  videwindow.h  welcomewindow.cpp  welcomewindow.h
src/ui/views/: Makefile.am  editorview.cpp  editorview.h  projectview.cpp  projectview.h  structureview.cpp  structureview.h  tasksview.cpp  tasksview.h  view.h
src/vi/: Makefile.am  vi.cpp
src/vide/: CMakeLists.txt  Makefile.am  editortipwindow.cpp  editortipwindow.h  main.cpp  projectwindow.cpp  projectwindow.h  settingswindow.cpp  settingswindow.h  videapp.cpp  videapp.h  videwindow.cpp  videwindow.h  welcomewindow.cpp  welcomewindow.h
src/vide/views/: Makefile.am  editorview.cpp  editorview.h  projectview.cpp  projectview.h  structureview.cpp  structureview.h  tasksview.cpp  tasksview.h
src/videtool/: Makefile.am  main.cpp  videtool
testproject/: README.md
testproject/docs/: tabs.txt
testproject/include/: test.h
testproject/java/: HelloWorld.java  HelloWorldBroken.java
testproject/src/: broken.cpp  long.cpp  main.cpp  tabs.cpp  test.cpp
tests/: CMakeLists.txt  Makefile.am  main.cpp  testBuffer.cpp  testEditor.cpp
