
bin_PROGRAMS=vide

vide_SOURCES=main.cpp vide.cpp editor.cpp utils.cpp buffer.cpp interface.cpp vi.cpp format.cpp
#vide_LDADD=../libfrontier/libfrontier.la
#vide_LDFLAGS=-framework Cocoa -framework AppKit

#all:
#	gcc -g -O0 -o vide main.cpp vide.cpp editor.cpp utils.cpp buffer.cpp mode.cpp vimode.cpp `pkg-config libfrontier --cflags --libs` -lstdc++
