
SUBDIRS=editor project filetypes ui interfaces plugins buildtools

bin_PROGRAMS=vide

vide_SOURCES=main.cpp vide.cpp utils.cpp re.cpp

vide_LDADD=editor/libeditor.la project/libproject.la filetypes/libfiletypes.la ui/libui.la interfaces/libinterfaces.la plugins/libplugins.la buildtools/libbuildtools.la

