
if HAS_LIBCLANG
noinst_LTLIBRARIES=libcxx.la

libcxx_la_SOURCES=cxxfiletypemanager.cpp

libcxx_la_CPPFLAGS=-I{top_srcdir}/src

endif

#vide_LDADD=../libfrontier/libfrontier.la
#vide_LDFLAGS=-framework Cocoa -framework AppKit

#all:
#	gcc -g -O0 -o vide main.cpp vide.cpp editor.cpp utils.cpp buffer.cpp mode.cpp vimode.cpp `pkg-config libfrontier --cflags --libs` -lstdc++
