
noinst_LTLIBRARIES=libvi.la

libvi_la_SOURCES=vi.cpp commands.cpp excommands.cpp

libvi_la_CPPFLAGS=-I{top_srcdir}/src

#vide_LDADD=../libfrontier/libfrontier.la
#vide_LDFLAGS=-framework Cocoa -framework AppKit

#all:
#	gcc -g -O0 -o vide main.cpp vide.cpp editor.cpp utils.cpp buffer.cpp mode.cpp vimode.cpp `pkg-config libfrontier --cflags --libs` -lstdc++
